fix(browser): repair non-executable Chromium cache